[package]
name = "scenarios"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
candid = "0.10.14"
chrono = "0.4.41"
ic-agent = "0.41.0"
icrc-ledger-types = "0.1.10"
regex = "1.11.1"
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
abstractions = { path = "../../src/shared/abstractions", features = ["with-chrono"] }
config = "0.14.1"
serde = "=1.0.219"