[package]
name = "token"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.14"
hex = "0.4.3"
ic-cdk = "0.18.5"
ic-stable-structures = "0.6.9"
icrc-ledger-types = "0.1.10"
num-traits = "0.2.19"
serde = "1.0.219"
abstractions = { path = "../../shared/abstractions" }
canister-runtime = { path = "../../shared/canister_runtime" }