[package]
name = "abstractions"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
candid = "0.10.14"
chrono = { version = "0.4.41", optional = true }
ic-cdk = "0.18.5"
icrc-ledger-types = "0.1.10"
serde = "1.0.219"
serde_bytes = "0.11.17"

[features]
default = []
with-chrono = ["chrono"]